; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_set_erase_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_set_erase_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor_erase_type = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spi_nor_erase_type*, i32, i32)* @spi_nor_set_erase_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spi_nor_set_erase_type(%struct.spi_nor_erase_type* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.spi_nor_erase_type*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.spi_nor_erase_type* %0, %struct.spi_nor_erase_type** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %9 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %12 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %11, i32 0, i32 3
  store i32 %10, i32* %12, align 4
  %13 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %14 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @ffs(i32 %15)
  %17 = sub nsw i32 %16, 1
  %18 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %19 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %21 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = shl i32 1, %22
  %24 = sub nsw i32 %23, 1
  %25 = load %struct.spi_nor_erase_type*, %struct.spi_nor_erase_type** %4, align 8
  %26 = getelementptr inbounds %struct.spi_nor_erase_type, %struct.spi_nor_erase_type* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  ret void
}

declare dso_local i32 @ffs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
